[project]
name = "velour-api"
version = "0.1.0"
description = "Backend for Velour evaluation store"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = ["fastapi[all]", "PyJWT", "GeoAlchemy2", "psycopg2", "SQLAlchemy>=2.0", "Pillow >= 9.1.0"]

[build-system]
requires =  ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "numpy", "coverage"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
