[project]
name = "velour-client"
version = "0.1.0"
description = "Python client for Velour evaluation store"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
dependencies = ["requests"]

[build-system]
requires =  ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
