[project]
name = "valor-client"
dynamic = ["version"]
description = "Python client for the Valor evaluation store"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "Pillow >= 9.1.0",
    "numpy",
    "importlib_metadata; python_version < '3.8'",
    "tqdm",
    "packaging",
]

[project.urls]
homepage = "https://www.striveworks.com"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest", "coverage"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools_scm]
root = ".."
