[project]
name = "valor-lite"
dynamic = ["version"]
description = "Compute valor metrics locally."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "evaluate",
    "importlib_metadata; python_version < '3.8'",
    "nltk",
    "numpy",
    "Pillow >= 9.1.0",
    "requests",
    "rouge_score",
    "shapely",
    "tqdm",
]

[project.urls]
homepage = "https://www.striveworks.com"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
mistral = ["mistralai >= 1.0"]
openai = ["openai"]
test = ["pytest", "coverage", "pre-commit"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools_scm]
root = ".."
