[project]
name = "valor-lite"
dynamic = ["version"]
description = "Evaluate machine learning models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "tqdm",
    "shapely",
]

[project.urls]
homepage = "https://www.striveworks.com"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
nlp = ["evaluate", "nltk", "rouge_score"]
mistral = ["mistralai >= 1.0"]
openai = ["openai"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-include-dir-to-nav",
    "mkdocs-swagger-ui-tag",
]
test = ["pytest", "coverage", "pre-commit"]
benchmark = ["requests"]
dev = ["valor-lite[nlp, openai, mistral, benchmark, test, docs]"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.setuptools_scm]
root = ".."
